<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>qSlicerZoom2DWidget</class>
 <widget class="qSlicerWidget" name="qSlicerZoom2DWidget">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>347</width>
    <height>93</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Form</string>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout">
   <item>
    <layout class="QHBoxLayout" name="hLayout">
     <item>
      <widget class="QLabel" name="sliceLabel">
       <property name="text">
        <string>Slice:</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="qMRMLNodeComboBox" name="sliceNodeSelector">
       <property name="nodeTypes">
        <stringlist>
         <string>vtkMRMLSliceNode</string>
        </stringlist>
       </property>
       <property name="addEnabled">
        <bool>false</bool>
       </property>
       <property name="removeEnabled">
        <bool>false</bool>
       </property>
      </widget>
     </item>
    </layout>
   </item>
   <item>
    <layout class="QFormLayout" name="formLayout">
     <item row="0" column="0">
      <widget class="QLabel" name="hZoomLabel">
       <property name="text">
        <string>horizontal zoom:</string>
       </property>
      </widget>
     </item>
     <item row="1" column="0">
      <widget class="QLabel" name="vZoomLabel">
       <property name="text">
        <string>vertical zoom:</string>
       </property>
      </widget>
     </item>
     <item row="0" column="1">
      <widget class="qSlicerGainWidget" name="xGainWidget" native="true"/>
     </item>
     <item row="1" column="1">
      <widget class="qSlicerGainWidget" name="yGainWidget" native="true"/>
     </item>
    </layout>
   </item>
  </layout>
 </widget>
 <customwidgets>
  <customwidget>
   <class>qMRMLNodeComboBox</class>
   <extends>QWidget</extends>
   <header>qMRMLNodeComboBox.h</header>
   <container>1</container>
   <slots>
    <signal>mrmlSceneChanged(vtkMRMLScene*)</signal>
    <slot>setMRMLScene(vtkMRMLScene*)</slot>
   </slots>
  </customwidget>
  <customwidget>
   <class>qSlicerWidget</class>
   <extends>QWidget</extends>
   <header>qSlicerWidget.h</header>
   <container>1</container>
  </customwidget>
  <customwidget>
   <class>qSlicerGainWidget</class>
   <extends>QWidget</extends>
   <header>qSlicerGainWidget.h</header>
   <container>1</container>
  </customwidget>
 </customwidgets>
 <resources/>
 <connections>
  <connection>
   <sender>qSlicerZoom2DWidget</sender>
   <signal>mrmlSceneChanged(vtkMRMLScene*)</signal>
   <receiver>sliceNodeSelector</receiver>
   <slot>setMRMLScene(vtkMRMLScene*)</slot>
   <hints>
    <hint type="sourcelabel">
     <x>31</x>
     <y>88</y>
    </hint>
    <hint type="destinationlabel">
     <x>82</x>
     <y>29</y>
    </hint>
   </hints>
  </connection>
 </connections>
</ui>
